--- a/client/src/components/styles/Card.scss
+++ b/client/src/components/styles/Card.scss
@@ -2,9 +2,7 @@
 
 article.card {
   position: relative;
-  z-index: 10;
-  width: 100%;
-  height: 100%;
+  z-index: 11;
   padding: .2em;
 
 
@@ -12,12 +10,10 @@ article.card {
     transition: 50ms;
     background-color: $default;
     min-width: 100px;
-    height: 100%;
-    padding: .5rem;
+    padding: .5em;
     border: 1px solid rgb(43, 192, 226);
     border-radius: 0.4rem;
     overflow: hidden;
-
 
     p {
       margin: .5rem 0;
@@ -40,8 +36,9 @@ article.card {
     }
 
     &:hover {
+      position: relative;
       transform: scale(1.2) !important;
-      z-index: 10;
+      z-index: 20;
       box-shadow:
         12px 12px 10px rgba(0, 0, 0, 0.02),
         10px 10px 40px rgba(0, 0, 0, 0.04);
