--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -8,3 +8,8 @@ $text-dark: #455d3e;
 $default: #fdfbf0;
 $complete: #eff4f5;
 $started: #f7f1f5;
+
+// sizing
+$cell-width: 8rem;
+$cell-height: 8rem;
+$radius: 10px;
